# scripts

./: .gitignore  README  README.md
ansible/: README.md  host.ini  provision.playbook
ansible/roles/create-service/defaults/: main.yml
ansible/roles/create-service/files/: zanbeel.service
ansible/roles/create-service/handlers/: main.yml
ansible/roles/create-service/tasks/: main.yml
ansible/roles/create-service/tests/: test.yml
ansible/roles/create-service/vars/: main.yml
ansible/roles/disable-auto-update/defaults/: main.yml
ansible/roles/disable-auto-update/handlers/: main.yml
ansible/roles/disable-auto-update/tasks/: main.yml
ansible/roles/disable-auto-update/tests/: test.yml
ansible/roles/obs/files/: pyproject.toml
bash/: README.md  add_secgroup_ssh.sh  all_ec2.sh  all_instance_ids.sh  aws-secret-last-access.sh  backupvol.sh  create_elasticbeanstalk_environments.sh  ec2_all.sh  elb.sh  encrypt_ebs.bak  encrypt_ebs.sh  get_all_ec2_across_regions.sh  get_all_s3_logs.sh  get_all_sec.sh  get_all_secgroup.sh  getallsecrets.sh  install.sh  is_encrypted.sh  orchestration.sh  sec.sh  sim_all_pass.sh
python/: README.md  backupcontainer.py  monitorzanbeel.py
python/HelloWorld/: app.py
python/PyCon2020_Scraping_Basics/: bea.py  penn.py  second.py
python/aws/: ._allec2.xlsx  ._elbs.csv  ._elbs.xlsx  ._final.csv  ._pand  ._~$elbs.xlsx  allec2.xlsx  ec2info.py  ec2info_chatgpt.py  elb.py  elbs.csv  elbs.xlsx  main.py  new2.py  newpand.py  newpand2.py  pand  pand.py  ~$elbs.xlsx
python/boto/: README.md  flow.py  list-snapshots.py  redshift_snapshot.py
(+87 files in other folders)
